  is in redirecting stderr to NIL: which will prompt the requester use.

- gettimeofday() now calls GetSysTime() rather than DateStamp() to obtain
  the current system time. This resolves granularity issues since the
  DateStamp() result was only accurate by 1/50 of a second.

- The "ptrdiff_t" definition in <stddef.h> now defaults to type 'int' rather
  than 'long int'.


c.lib 1.185 (2.1.2005)

- Moved the environment variable cleanup code into a destructor function.

- Fixed a typo in the hstrerror() function.

- The common error reporting function __show_error() could throw Enforcer
  hits if the program was not launched from Shell. Fixed.

- Moved the memory initialization and cleanup functions into the
  malloc/free code itself and updated the alloca code to do its
  own data management.

- Finally optimized the alloca() memory cleanup code.

- Tried to make it possible to have debug versions of the memory
  management code in the default link library along with the
  normal versions. Let's see how well this works out in the GCC
  version. SAS/C does not seem to like it...

- Changed the definition of alloca() for GCC, which now defaults 
  to the built-in function.

- Updated the stdio.h, stdlib.h, string.h and unistd.h header files
  to declare function prototypes for the __MEM_DEBUG versions of the
  library functions only if that preprocessor symbol is defined.

- If a SIGINT signal is caught and processed by the default signal
  handler, the localized "*** BREAK" string will be printed rather
  than the built-in one.

- The data structure alignment (file I/O buffer) is now configurable
  at compile time. The default used to be 16 bytes, which is appropriate
  for the 68040/68060 but not for the PowerPC, which uses 32 or 128
  bytes per cache line.

- fwrite() now flushes the entire "buffer" for unbuffered files. The
  exception are "interactive" files such as console windows. For these
  line buffered output is used.
