@@ -36,21 +36,50 @@
 
 /****************************************************************************/
 
-#define CHAR_BIT	8
-#define CHAR_MAX	127
-#define CHAR_MIN	-128
-#define INT_MAX		2147483647L
-#define INT_MIN		(-2147483647L - 1)
-#define LONG_MAX	2147483647L
-#define LONG_MIN	(-2147483647L - 1)
-#define SCHAR_MAX	127
-#define SCHAR_MIN	-128
-#define SHRT_MAX	32767
+#define CHAR_BIT 8
+
+/****************************************************************************/
+
+#define SCHAR_MIN -128
+#define SCHAR_MAX 127
+#define UCHAR_MAX 255
+
+/****************************************************************************/
+
+/*
+ * The following defines the range a 'char' can cover by checking a
+ * preprocessor symbol; we support both SAS/C and GCC here.
+ */
+
+#if (defined(__GNUC__) && defined(__CHAR_UNSIGNED__)) || (defined(__SASC) && defined(_UNSCHAR))
+
+#define CHAR_MIN 0
+#define CHAR_MAX 255
+
+#else
+
+#define CHAR_MIN -128
+#define CHAR_MAX 127
+
+#endif /* (__GNUC__ && __CHAR_UNSIGNED) || (__SASC && _UNSCHAR) */
+
+/****************************************************************************/
+
 #define SHRT_MIN	-32768
-#define UCHAR_MAX	255
-#define UINT_MAX	4294967295UL
-#define ULONG_MAX	4294967295UL
+#define SHRT_MAX	32767
 #define USHRT_MAX	65535
+
+/****************************************************************************/
+
+#define INT_MIN		(-2147483647L - 1)
+#define INT_MAX		2147483647L
+#define UINT_MAX	4294967295UL
+
+/****************************************************************************/
+
+#define LONG_MIN	(-2147483647L - 1)
+#define LONG_MAX	2147483647L
+#define ULONG_MAX	4294967295UL
 
 /****************************************************************************/
 
